--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "discord": "^0.8.2",
     "discord.js": "^12.2.0",
     "dotenv": "^8.0.0",
-    "google-spreadsheet": "^3.0.11"
+    "google-spreadsheet": "^3.0.11",
+    "node-schedule": "^1.3.2"
   },
   "devDependencies": {}
 }
