--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
   },
   "homepage": "https://github.com/outscal/DiscordBot#readme",
   "dependencies": {
-    "discord": "^0.8.2",
     "discord.js": "^12.2.0",
     "dotenv": "^8.0.0",
-    "google-spreadsheet": "^3.0.11"
+    "firebase-admin": "^9.0.0"
   },
   "devDependencies": {}
 }
