--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.0.0",
     "google-spreadsheet": "^3.0.11",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "^1.3.2",
+    "firebase-admin": "^9.0.0"
   },
   "devDependencies": {}
 }
