--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "discord": "^0.8.2",
     "discord.js": "^12.2.0",
     "dotenv": "^8.0.0",
+    "firebase": "^7.17.1",
+    "firebase-admin": "^9.0.0",
     "google-spreadsheet": "^3.0.11",
-    "node-schedule": "^1.3.2",
-    "firebase-admin": "^9.0.0"
+    "node-schedule": "^1.3.2"
   },
   "devDependencies": {}
 }
