--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "dotenv": "^8.0.0",
-    "firebase-admin": "^9.0.0"
+    "firebase-admin": "^9.0.0",
+    "moment": "^2.27.0"
   },
   "devDependencies": {}
 }
