--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.0.0",
     "firebase-admin": "^9.0.0",
+    "got": "^11.5.1",
     "universal-analytics": "^0.4.23"
   },
   "devDependencies": {}
