--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "firebase": "^7.17.1",
     "firebase-admin": "^9.0.0",
     "google-spreadsheet": "^3.0.11",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "^1.3.2",
+    "node-schedule-tz": "^1.2.1-4"
   },
   "devDependencies": {}
 }
