Moved !showid out of Team check.

--- a/.env.dummy
+++ b/.env.dummy
@@ -1,5 +1,5 @@
   
-DISCORD_APP_TOKEN = "Paste your token here."
+DISCORD_APP_TOKEN = "Paste token here"
 GENERAL_CHANNEL_ID  = "channel"
 
 HOST = 'host'
