--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/outscal/DiscordBot#readme",
   "dependencies": {
     "discord.js": "^12.2.0",
+    "discord.js-collector": "^1.8.8",
     "dotenv": "^8.0.0",
     "firebase": "^7.17.1",
     "firebase-admin": "^9.0.0",
